deployments/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rdicidr-deployment
  labels:
    app: rdicidr
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rdicidr
  template:
    metadata:
      labels:
        app: rdicidr
    spec:
      containers:
      - name: rdicidr-test
        image: public.ecr.aws/l7r0b8r4/rdicidr-test:latest
        ports:
        - containerPort: 80
