deployments/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rdicidr-service
spec:
  type: ClusterIP
  selector:
    app: rdicidr
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
