deployments/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rdicidr-ingress
spec:
  rules:
  - host: "fsl-challenge.me"
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/"
        backend:
          service:
            name: rdicidr-service
            port:
              number: 8080
